# mqtt_demo

./: .gitignore  CMakeLists.txt  README.md
lib/: libpaho-mqtt3a.so.1  libpaho-mqtt3a.so.1.3.11  libpaho-mqtt3as.so.1.3.11  libpaho-mqtt3c.so.1  libpaho-mqtt3c.so.1.3.11  libpaho-mqtt3cs.so.1  libpaho-mqtt3cs.so.1.3.11
src/: data_publish.cpp
src/sqliteclient/: sqliteclient.cpp  sqliteclient.h
src/sqliteclientb/: sqliteclient.cpp  sqliteclient.h
test/: sqlite_test.cpp
